[metadata]
name = dlm-search
version = attr: dlmsearch.__version__
author = Bernhard Arnold
description = DLM Search
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3

[options]
python_requires = >=3.9
packages = find:
install_requires =
    bottle==0.12.*
    jinja2==2.11.*
    markupsafe==2.0.*
    pony==0.7.*
    gunicorn==20.1.*
test_suite = tests
include_package_data = True

[options.packages.find]
exclude=tests

[options.package_data]
dlmsearch.views = *.html
dlmsearch = local.db